@@ -34,6 +34,8 @@ xine-lib (1.1.90) (Unreleased)
     will not be present in KDE 4.
   * Convert the FAQ and the Hacker's Guide from DocBook SGML to DocBook 4.4
     XML, and the figures from fig files to SVG files.
+  * Send a channel changed event to the frontend when receiving the SYNC
+    string from last.fm streaming server.
 
 xine-lib (1.1.7)
   * Support libdca (new name for libdts) by shuffling around the dts.h file.
